force-app/main/default/objects/Course_Master__c/Course_Master__c.object-meta.xml
<CustomObject>
    <label>Course Master</label>
    <nameField>
        <label>Course Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>