force-app/main/default/objects/Course_Master__c/fields/Client_Course__c.field-meta.xml
<CustomField>
    <fullName>Client_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Course</label>
    <type>Checkbox</type>
</CustomField>