force-app/main/default/objects/Course_Master__c/fields/Common_Course__c.field-meta.xml
<CustomField>
    <fullName>Common_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common Course</label>
    <type>Checkbox</type>
</CustomField>