force-app/main/default/objects/Course_Master__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <label>Course Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>