force-app/main/default/objects/Course_Master__c/fields/Course_SIS_Section_SIS_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_SIS_Section_SIS_Course_Name__c</fullName>
    <formula>Course_SIS__c &amp;&quot;-&quot;&amp; Section_SIS__c &amp;&quot;-&quot;&amp; Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course SIS Section SIS Course Name</label>
    <type>Text</type>
</CustomField>