force-app/main/default/objects/Course_Master__c/fields/Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion__c</fullName>
    <description>Expected Completion in Weeks</description>
    <label>Expected Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>