force-app/main/default/objects/Course_Master__c/fields/Facilitator_Course__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilitator Course</label>
    <type>Checkbox</type>
</CustomField>