force-app/main/default/objects/Course_Master__c/fields/Optional__c.field-meta.xml
<CustomField>
    <fullName>Optional__c</fullName>
    <description>Select positions that this course is optional for</description>
    <label>Optional</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Positions</valueSetName>
    </valueSet>
</CustomField>