force-app/main/default/objects/Course_Master__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <description>Positions for which this course is required</description>
    <inlineHelpText>Select positions this course is required for</inlineHelpText>
    <label>Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Positions</valueSetName>
    </valueSet>
</CustomField>