force-app/main/default/objects/Course_Master__c/fields/Section_SIS__c.field-meta.xml
<CustomField>
    <fullName>Section_SIS__c</fullName>
    <label>Section SIS</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>