force-app/main/default/objects/Course_Master__c/fields/Trainer_Course__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trainer Course</label>
    <type>Checkbox</type>
</CustomField>