force-app/main/default/objects/Course_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Code__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Common_Course__c</columns>
    <columns>Client_Course__c</columns>
    <columns>Trainer_Course__c</columns>
    <columns>Facilitator_Course__c</columns>
    <columns>Course_SIS__c</columns>
    <columns>Section_SIS__c</columns>
    <columns>Term_SIS__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>